--- a/index.html
+++ b/index.html
@@ -73,24 +73,23 @@
         </div>
 
         <div class="Child Quote">
-            <p>This is an inspiring quote, or a testimonial form a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-            <p>-Thor, God of Thunder</p>
+            <p class="thequote">This is an inspiring quote, or a testimonial form a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <p class="author">-Thor, God of Thunder</p>
         </div>
 
-        <div class="Child Action">
-
-            <div class="holderofaction">
+        <div class="Child act">
+           <div class="Action">
                 <div class="actioninfo">
-                    <h1></h1>
-                    <p></p>
+                    
+                    <p class="asign"><span class="atext">Call to action! It's Time!</span><br>Sign up for our product by clicking that button right over there!</p>
                 </div>
-                <button>Sign up</button>
-            </div>
 
+                <button class="singZup">Sign up</button>
+            </div>
         </div>
 
         <div class="Child Footer">
-            Copyright @ The Odin Project 2021
+            <p>Copyright @ The Odin Project 2021</p>
         </div>
 
     </div>
